# rust-telegram-bot

./: .gitignore  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  rtb-reports.md
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: README.md  (+1 more)
crates/telegram-bot/: Cargo.toml
crates/telegram-bot-ext/: Cargo.toml
crates/telegram-bot-ext/src/: application.rs  builder.rs  callback_data_cache.rs  context.rs  context_types.rs  defaults.rs  ext_bot.rs  job_queue.rs  lib.rs  prelude.rs  rate_limiter.rs  update_processor.rs  updater.rs
crates/telegram-bot-ext/src/filters/: base.rs  chat.rs  command.rs  document.rs  entity.rs  forwarded.rs  mod.rs  photo.rs  regex.rs  status_update.rs  text.rs  user.rs  via_bot.rs
crates/telegram-bot-ext/src/handlers/: base.rs  business_connection.rs  business_messages_deleted.rs  callback_query.rs  chat_boost.rs  chat_join_request.rs  chat_member.rs  chosen_inline_result.rs  command.rs  conversation.rs  inline_query.rs  message.rs  message_reaction.rs  mod.rs  paid_media_purchased.rs  poll.rs  poll_answer.rs  pre_checkout_query.rs  prefix.rs  shipping_query.rs  string_command.rs  string_regex.rs  type_handler.rs
crates/telegram-bot-ext/src/persistence/: base.rs  dict.rs  json_file.rs  mod.rs  postgres.rs  redis.rs  sqlite.rs
crates/telegram-bot-ext/src/utils/: mod.rs  network_loop.rs  tracking_dict.rs  types.rs  update_parsing.rs  webhook_handler.rs
crates/telegram-bot-ext/tests/: filter_proptest.rs  persistence_stress.rs
crates/telegram-bot-macros/: Cargo.toml
crates/telegram-bot-macros/src/: bot_commands.rs  command.rs  command_attr.rs  command_enum.rs  error.rs  fields_parse.rs  lib.rs  rename_rules.rs
crates/telegram-bot-raw/: Cargo.toml
crates/telegram-bot-raw/benches/: throughput.rs
crates/telegram-bot-raw/src/: bot.rs  bot_builders.rs  bot_builders_2.rs  bot_builders_3.rs  bot_builders_4.rs  constants.rs  error.rs  helpers.rs  lib.rs  macros.rs
crates/telegram-bot-raw/src/bot/: admin.rs  business_methods.rs  chat.rs  editing.rs  forum.rs  games_methods.rs  gifts_methods.rs  inline_methods.rs  keyboard_methods.rs  managed_bots.rs  media.rs  messages.rs  mod.rs  other_content.rs  passport.rs  payments.rs  reactions.rs  stickers.rs  stories.rs  suggested_posts.rs  user_profile.rs  verification.rs
crates/telegram-bot-raw/src/request/: base.rs  mod.rs  request_data.rs  request_parameter.rs  reqwest_impl.rs
crates/telegram-bot-raw/src/types/: birthdate.rs  bot_command.rs  bot_command_scope.rs  bot_description.rs  bot_name.rs  business.rs  callback_query.rs  chat.rs  chat_administrator_rights.rs  chat_background.rs  chat_boost.rs  chat_full_info.rs  chat_invite_link.rs  chat_join_request.rs  chat_location.rs  chat_member.rs  chat_member_updated.rs  chat_owner.rs  chat_permissions.rs  checklists.rs  chosen_inline_result.rs  copy_text_button.rs  dice.rs  direct_message_price_changed.rs  direct_messages_topic.rs  force_reply.rs  forum_topic.rs  gifts.rs  giveaway.rs  input_checklist.rs  keyboard_button.rs  keyboard_button_poll_type.rs  keyboard_button_request.rs  link_preview_options.rs  login_url.rs  managed_bot.rs  menu_button.rs  message.rs  message_auto_delete_timer_changed.rs  message_entity.rs  (+33 more)
crates/telegram-bot-raw/src/types/files/: animation.rs  audio.rs  base_medium.rs  base_thumbed_medium.rs  chat_photo.rs  contact.rs  document.rs  file.rs  input_file.rs  input_media.rs  input_profile_photo.rs  input_sticker.rs  input_story_content.rs  location.rs  mod.rs  photo_size.rs  sticker.rs  venue.rs  video.rs  video_note.rs  video_quality.rs  voice.rs
crates/telegram-bot-raw/src/types/games/: callback_game.rs  game.rs  game_high_score.rs  mod.rs
crates/telegram-bot-raw/src/types/inline/: inline_keyboard_button.rs  inline_keyboard_markup.rs  inline_query.rs  inline_query_result.rs  inline_query_result_article.rs  inline_query_result_audio.rs  inline_query_result_cached_audio.rs  inline_query_result_cached_document.rs  inline_query_result_cached_gif.rs  inline_query_result_cached_mpeg4_gif.rs  inline_query_result_cached_photo.rs  inline_query_result_cached_sticker.rs  inline_query_result_cached_video.rs  inline_query_result_cached_voice.rs  inline_query_result_contact.rs  inline_query_result_document.rs  inline_query_result_game.rs  inline_query_result_gif.rs  inline_query_result_location.rs  inline_query_result_mpeg4_gif.rs  inline_query_result_photo.rs  inline_query_result_venue.rs  inline_query_result_video.rs  inline_query_result_voice.rs  inline_query_results_button.rs  input_contact_message_content.rs  input_invoice_message_content.rs  input_location_message_content.rs  input_message_content.rs  input_text_message_content.rs  input_venue_message_content.rs  mod.rs  prepared_inline_message.rs
crates/telegram-bot-raw/src/types/passport/: credentials.rs  data.rs  encrypted_passport_element.rs  mod.rs  passport_data.rs  passport_element_errors.rs  passport_file.rs
crates/telegram-bot-raw/src/types/payment/: invoice.rs  labeled_price.rs  mod.rs  order_info.rs  pre_checkout_query.rs  refunded_payment.rs  shipping_address.rs  shipping_option.rs  shipping_query.rs  successful_payment.rs
crates/telegram-bot-raw/src/types/payment/stars/: affiliate_info.rs  mod.rs  revenue_withdrawal_state.rs  star_amount.rs  star_transactions.rs  transaction_partner.rs
crates/telegram-bot-raw/src/utils/: datetime.rs  entities.rs  files.rs  markup.rs  mod.rs  strings.rs  types.rs
crates/telegram-bot-raw/tests/: conformance.rs  roundtrip.rs
crates/telegram-bot/examples/: arbitrary_callback_data_bot.rs  bench_bot.rs  chat_member_bot.rs  commands_derive_bot.rs  context_types_bot.rs  conversation_bot.rs  conversation_bot2.rs  custom_webhook_bot.rs  deep_linking.rs  echo_bot.rs  error_handler_bot.rs  inline_bot.rs  inline_keyboard.rs  inline_keyboard2.rs  nested_conversation_bot.rs  passport_bot.rs  payment_bot.rs  persistent_conversation_bot.rs  poll_bot.rs  raw_api_bot.rs  timer_bot.rs  webapp_bot.rs  webhook_bot.rs
crates/telegram-bot/src/: lib.rs
(+84 files in other folders)
