[workspace]
resolver = "2"
members = [
    "crates/telegram-bot-raw",
    "crates/telegram-bot-ext",
    "crates/telegram-bot",
    "crates/telegram-bot-macros",
]
exclude = [
    "benchmarks/teloxide",
]

[workspace.package]
version = "1.0.0-rc.1"
edition = "2021"
rust-version = "1.75"
license = "LGPL-3.0-only"
repository = "https://github.com/HexiCoreDev/rust-telegram-bot"

[workspace.dependencies]
# Stack growth for deep deserialization
stacker = "0.1"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "signal", "fs", "io-util", "net"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }

# Byte buffers (re-exported by reqwest but declared explicitly for clarity)
bytes = "1"

# Async trait support
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Regex
regex = "1"

# URL handling
url = { version = "2", features = ["serde"] }

# Web framework (for webhooks)
axum = "0.8"

# SQLite (for persistence)
rusqlite = { version = "0.32", features = ["bundled"] }

# Redis (for persistence)
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

# PostgreSQL (for persistence)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"] }

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
opt-level = "s"
