[package]
name = "telegram-bot-ext"
description = "Application framework for Telegram bots — handlers, filters, persistence, job queue"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
telegram-bot-raw = { path = "../telegram-bot-raw" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
async-trait.workspace = true
bytes.workspace = true
reqwest.workspace = true

# Optional dependencies
axum = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }

[features]
default = ["polling"]
full = ["polling", "webhooks", "job-queue", "persistence-json", "rate-limiter"]
polling = []
webhooks = ["axum"]
job-queue = []
persistence-json = []
persistence-sqlite = ["rusqlite"]
rate-limiter = []
