[package]
name = "telegram-bot-ext"
description = "Application framework for Telegram bots -- handlers, filters, persistence, job queue"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Jude Etuka <judechinedu122@gmail.com>"]
keywords = ["telegram", "bot", "framework", "async", "handler"]
categories = ["api-bindings", "asynchronous", "web-programming"]
documentation = "https://docs.rs/telegram-bot-ext"
homepage = "https://github.com/HexiCoreDev/rust-telegram-bot"
readme = "../../README.md"
exclude = ["target/", ".github/", "docs/", "examples/"]

[dependencies]
telegram-bot-raw = { path = "../telegram-bot-raw" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
async-trait.workspace = true
bytes.workspace = true
reqwest.workspace = true

# Optional dependencies
axum = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
proptest = "1"

[features]
default = ["polling"]
full = ["polling", "webhooks", "job-queue", "persistence-json", "rate-limiter"]
polling = []
webhooks = ["axum"]
job-queue = []
persistence-json = []
persistence-sqlite = ["rusqlite"]
rate-limiter = []
