[package]
name = "rust-tg-bot-ext"
description = "Application framework for Telegram bots -- handlers, filters, persistence, job queue"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Jude Etuka <judechinedu122@gmail.com>"]
keywords = ["telegram", "bot", "framework", "async", "handler"]
categories = ["api-bindings", "asynchronous", "web-programming"]
documentation = "https://docs.rs/rust-tg-bot-ext"
homepage = "https://github.com/HexiCoreDev/rust-telegram-bot"
readme = "../../README.md"
exclude = ["target/", ".github/", "docs/", "examples/"]

[dependencies]
rust-tg-bot-raw = { path = "../telegram-bot-raw", version = "1.0.0-beta.4" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
async-trait.workspace = true
bytes.workspace = true
reqwest.workspace = true

# Optional dependencies
axum = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }

# Optional TLS dependencies (for webhooks-tls feature)
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["aws_lc_rs", "tls12"] }
rustls-pemfile = { version = "2", optional = true }
hyper-util = { version = "0.1", optional = true, features = ["tokio", "server-auto", "http1", "service"] }
tokio-util = { version = "0.7", optional = true }

[dev-dependencies]
proptest = "1"

[features]
default = ["polling"]
full = ["polling", "webhooks", "webhooks-tls", "job-queue", "persistence", "persistence-json", "persistence-sqlite", "persistence-redis", "persistence-postgres", "rate-limiter"]
polling = []
webhooks = ["axum"]
webhooks-tls = ["webhooks", "tokio-rustls", "rustls-pemfile", "hyper-util", "tokio-util"]
job-queue = []
persistence = []
persistence-json = ["persistence"]
persistence-sqlite = ["persistence", "rusqlite"]
persistence-redis = ["persistence", "redis"]
persistence-postgres = ["persistence", "sqlx"]
rate-limiter = []
