[package]
name = "rust-tg-bot-raw"
description = "Pure Telegram Bot API types and methods for Rust -- a faithful port of python-telegram-bot's core layer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Jude Etuka <judechinedu122@gmail.com>"]
keywords = ["telegram", "bot", "api", "async", "types"]
categories = ["api-bindings", "asynchronous", "web-programming"]
documentation = "https://docs.rs/rust-tg-bot-raw"
homepage = "https://github.com/HexiCoreDev/rust-telegram-bot"
readme = "../../README.md"
exclude = ["target/", ".github/", "docs/", "examples/"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
bytes.workspace = true
async-trait.workspace = true
regex.workspace = true
